2005-05-01  Andras Varga

	* cnullmessageprot.cc: eliminated warnings when compiled on 64-bit
	platforms [reported by Kendy Kutzner]

2005-03-31  ------ omnetpp-3.1 released ------

2005-01-10  Andras Varga

	* cfilecomm.cc: factored out platform dependencies to include/platdep

2004-12-29  ------ omnetpp-3.0 released ------

2004-12-13   Andras Varga

	* several values made configurable; all entries below are in the
	[General] section:

	parsim-debug = <true/false>
	   default: true
	parsim-mpicommunications-mpibuffer = <bytes>
	   default: 256K * (numPartitions-1) + 16K;
	   Size of MPI send buffer to allocate; see MPI_Buffer_attach()
	   MPI call. If the buffer is too small, a deadlock can occur.
	parsim-namedpipecommunications-prefix = <string>
	   Control the naming of named pipes.
	   Windows: default value is "omnetpp", which means that pipe names
	   will be of the form "\\.\pipe\omnetpp-xx-yy" (where xx and yy are
	   numbers).
	   Unix: default value is "comm/", which means that the named pipes
	   will be created with the name "comm/pipe-xx-yy". The "comm/"
	   subdirectory must already exist when the simulation is launched.
	parsim-filecommunications-prefix = <string>
	   default: "comm/"
	parsim-filecommunications-preserve-read = <true/false>
	   default: false
	parsim-filecommunications-read-prefix = <string>
	   default: "comm/read/"
	   The above 3 options control the cFileCommunicatinos class.
	   By default, it deletes files that were read. By enabling the
	   "preserve-read" setting, you can make it move read files to
	   another directory instead ("comm/read/" by default).
	   BEWARE: for mysterious reasons, it appears that there cannot be more
	   than about 19800 files in a directory. When that point is reached,
	   an exception is thrown somewhere inside the standard C library, which
	   materializes itself in OMNeT++ as an "Error: (null)" message...
	   Strangely, this can be reproduced in both Linux and Windows.